force-app/main/default/objects/BackEndPaging__c/BackEndPaging__c.object-meta.xml
<CustomObject>
    <description>Untuk menampung data BackEnd lalu di load dalam bentuk paging.

Schedule Delete setiap hari.</description>
    <label>BackEndPaging</label>
    <nameField>
        <label>Log No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BackEndPaging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>