force-app/main/default/objects/BackEndPaging__c/fields/CallNote_Createby__c.field-meta.xml
<CustomField>
    <fullName>CallNote_Createby__c</fullName>
    <label>CallNote Createby</label>
    <length>255</length>
    <type>Text</type>
</CustomField>