force-app/main/default/objects/BackEndPaging__c/fields/CallNote_CreateDate2__c.field-meta.xml
<CustomField>
    <fullName>CallNote_CreateDate2__c</fullName>
    <label>CallNote CreateDate2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>