force-app/main/default/objects/BackEndPaging__c/fields/CallNote_CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CallNote_CreateDate__c</fullName>
    <label>CallNote CreateDate</label>
    <type>Date</type>
</CustomField>