force-app/main/default/objects/BackEndPaging__c/fields/CallNote_CWC__c.field-meta.xml
<CustomField>
    <fullName>CallNote_CWC__c</fullName>
    <label>CallNote CWC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>