force-app/main/default/objects/BackEndPaging__c/fields/CallNote_Note__c.field-meta.xml
<CustomField>
    <fullName>CallNote_Note__c</fullName>
    <label>CallNote Note</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>