force-app/main/default/objects/BackEndPaging__c/fields/CallNote_ReturnCode__c.field-meta.xml
<CustomField>
    <fullName>CallNote_ReturnCode__c</fullName>
    <label>CallNote ReturnCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>