force-app/main/default/objects/BackEndPaging__c/fields/CallNote_Source__c.field-meta.xml
<CustomField>
    <fullName>CallNote_Source__c</fullName>
    <label>CallNote Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>