force-app/main/default/objects/BackEndPaging__c/fields/CallNote_Status__c.field-meta.xml
<CustomField>
    <fullName>CallNote_Status__c</fullName>
    <label>CallNote Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>