force-app/main/default/objects/BackEndPaging__c/fields/Claim_ACCOUNTNAME__c.field-meta.xml
<CustomField>
    <fullName>Claim_ACCOUNTNAME__c</fullName>
    <label>Claim ACCOUNTNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>