force-app/main/default/objects/BackEndPaging__c/fields/Claim_ACCOUNTNO__c.field-meta.xml
<CustomField>
    <fullName>Claim_ACCOUNTNO__c</fullName>
    <label>Claim ACCOUNTNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>