force-app/main/default/objects/BackEndPaging__c/fields/Claim_ADMISSIONDATE__c.field-meta.xml
<CustomField>
    <fullName>Claim_ADMISSIONDATE__c</fullName>
    <label>Claim ADMISSIONDATE</label>
    <type>Date</type>
</CustomField>