force-app/main/default/objects/BackEndPaging__c/fields/Claim_ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>Claim_ApprovalDate__c</fullName>
    <label>Claim ApprovalDate</label>
    <type>Date</type>
</CustomField>