force-app/main/default/objects/BackEndPaging__c/fields/Claim_BANKNAME__c.field-meta.xml
<CustomField>
    <fullName>Claim_BANKNAME__c</fullName>
    <label>Claim BANKNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>