force-app/main/default/objects/BackEndPaging__c/fields/Claim_CLAIMANT__c.field-meta.xml
<CustomField>
    <fullName>Claim_CLAIMANT__c</fullName>
    <label>Claim CLAIMANT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>