force-app/main/default/objects/BackEndPaging__c/fields/Claim_ClaimCurrency__c.field-meta.xml
<CustomField>
    <fullName>Claim_ClaimCurrency__c</fullName>
    <label>Claim ClaimCurrency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>