force-app/main/default/objects/BackEndPaging__c/fields/Claim_ClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>Claim_ClaimNumber__c</fullName>
    <label>Claim ClaimNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>