force-app/main/default/objects/BackEndPaging__c/fields/Claim_ClaimPlan__c.field-meta.xml
<CustomField>
    <fullName>Claim_ClaimPlan__c</fullName>
    <label>Claim ClaimPlan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>