force-app/main/default/objects/BackEndPaging__c/fields/Claim_ClaimStatus1__c.field-meta.xml
<CustomField>
    <fullName>Claim_ClaimStatus1__c</fullName>
    <label>Claim ClaimStatus1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>