force-app/main/default/objects/BackEndPaging__c/fields/Claim_ClaimStatus2__c.field-meta.xml
<CustomField>
    <fullName>Claim_ClaimStatus2__c</fullName>
    <label>Claim ClaimStatus2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>