force-app/main/default/objects/BackEndPaging__c/fields/Claim_ClaimType__c.field-meta.xml
<CustomField>
    <fullName>Claim_ClaimType__c</fullName>
    <label>Claim ClaimType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>