force-app/main/default/objects/BackEndPaging__c/fields/Claim_DECISIONDATE__c.field-meta.xml
<CustomField>
    <fullName>Claim_DECISIONDATE__c</fullName>
    <label>Claim DECISIONDATE</label>
    <type>Date</type>
</CustomField>