force-app/main/default/objects/BackEndPaging__c/fields/Claim_HOSPITAL__c.field-meta.xml
<CustomField>
    <fullName>Claim_HOSPITAL__c</fullName>
    <label>Claim HOSPITAL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>