force-app/main/default/objects/BackEndPaging__c/fields/Claim_ICUDAYS__c.field-meta.xml
<CustomField>
    <fullName>Claim_ICUDAYS__c</fullName>
    <label>Claim ICUDAYS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>