force-app/main/default/objects/BackEndPaging__c/fields/Claim_ISEXGRATIACASE__c.field-meta.xml
<CustomField>
    <fullName>Claim_ISEXGRATIACASE__c</fullName>
    <label>Claim ISEXGRATIACASE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>