force-app/main/default/objects/BackEndPaging__c/fields/Claim_MODIFYDATE__c.field-meta.xml
<CustomField>
    <fullName>Claim_MODIFYDATE__c</fullName>
    <label>Claim MODIFYDATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>