force-app/main/default/objects/BackEndPaging__c/fields/Claim_PAYMENTDATE__c.field-meta.xml
<CustomField>
    <fullName>Claim_PAYMENTDATE__c</fullName>
    <label>Claim PAYMENTDATE</label>
    <type>Date</type>
</CustomField>