force-app/main/default/objects/BackEndPaging__c/fields/Claim_ProductType__c.field-meta.xml
<CustomField>
    <fullName>Claim_ProductType__c</fullName>
    <label>Claim ProductType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>