force-app/main/default/objects/BackEndPaging__c/fields/Claim_REGULARDAYS__c.field-meta.xml
<CustomField>
    <fullName>Claim_REGULARDAYS__c</fullName>
    <label>Claim REGULARDAYS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>