force-app/main/default/objects/BackEndPaging__c/fields/Claim_REMARK__c.field-meta.xml
<CustomField>
    <fullName>Claim_REMARK__c</fullName>
    <label>Claim REMARK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>