force-app/main/default/objects/BackEndPaging__c/fields/Claim_StatusDesc__c.field-meta.xml
<CustomField>
    <fullName>Claim_StatusDesc__c</fullName>
    <label>Claim StatusDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>