force-app/main/default/objects/BackEndPaging__c/fields/Claim_SubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>Claim_SubmissionDate__c</fullName>
    <label>Claim SubmissionDate</label>
    <type>Date</type>
</CustomField>