force-app/main/default/objects/BackEndPaging__c/fields/Payment_ACCOUNTNAME__c.field-meta.xml
<CustomField>
    <fullName>Payment_ACCOUNTNAME__c</fullName>
    <label>Payment ACCOUNTNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>