force-app/main/default/objects/BackEndPaging__c/fields/Payment_ACCOUNTNO__c.field-meta.xml
<CustomField>
    <fullName>Payment_ACCOUNTNO__c</fullName>
    <label>Payment ACCOUNTNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>