force-app/main/default/objects/BackEndPaging__c/fields/Payment_AGE__c.field-meta.xml
<CustomField>
    <fullName>Payment_AGE__c</fullName>
    <label>Payment AGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>