force-app/main/default/objects/BackEndPaging__c/fields/Payment_AUTHCODE__c.field-meta.xml
<CustomField>
    <fullName>Payment_AUTHCODE__c</fullName>
    <label>Payment AUTHCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>