force-app/main/default/objects/BackEndPaging__c/fields/Payment_BANK__c.field-meta.xml
<CustomField>
    <fullName>Payment_BANK__c</fullName>
    <label>Payment BANK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>