force-app/main/default/objects/BackEndPaging__c/fields/Payment_BILLINGNO__c.field-meta.xml
<CustomField>
    <fullName>Payment_BILLINGNO__c</fullName>
    <label>Payment BILLINGNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>