force-app/main/default/objects/BackEndPaging__c/fields/Payment_CARDEXPIRE__c.field-meta.xml
<CustomField>
    <fullName>Payment_CARDEXPIRE__c</fullName>
    <label>Payment CARDEXPIRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>