force-app/main/default/objects/BackEndPaging__c/fields/Payment_CARDNAME__c.field-meta.xml
<CustomField>
    <fullName>Payment_CARDNAME__c</fullName>
    <label>Payment CARDNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>