force-app/main/default/objects/BackEndPaging__c/fields/Payment_CARDNO__c.field-meta.xml
<CustomField>
    <fullName>Payment_CARDNO__c</fullName>
    <label>Payment CARDNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>