force-app/main/default/objects/BackEndPaging__c/fields/Payment_COUNT_NOT_PAID__c.field-meta.xml
<CustomField>
    <fullName>Payment_COUNT_NOT_PAID__c</fullName>
    <label>Payment COUNT_NOT_PAID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>