force-app/main/default/objects/BackEndPaging__c/fields/Payment_DueDate__c.field-meta.xml
<CustomField>
    <fullName>Payment_DueDate__c</fullName>
    <label>Payment DueDate</label>
    <type>Date</type>
</CustomField>