force-app/main/default/objects/BackEndPaging__c/fields/Payment_MONTHSBILLED__c.field-meta.xml
<CustomField>
    <fullName>Payment_MONTHSBILLED__c</fullName>
    <label>Payment MONTHSBILLED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>