force-app/main/default/objects/BackEndPaging__c/fields/Payment_Payment_DATE__c.field-meta.xml
<CustomField>
    <fullName>Payment_Payment_DATE__c</fullName>
    <label>Payment Payment_DATE</label>
    <type>Date</type>
</CustomField>