force-app/main/default/objects/BackEndPaging__c/fields/Payment_PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>Payment_PaymentDate__c</fullName>
    <label>Payment PaymentDate</label>
    <type>Date</type>
</CustomField>