force-app/main/default/objects/BackEndPaging__c/fields/Payment_POLICYNO__c.field-meta.xml
<CustomField>
    <fullName>Payment_POLICYNO__c</fullName>
    <label>Payment POLICYNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>