force-app/main/default/objects/BackEndPaging__c/fields/Payment_PRODUCT__c.field-meta.xml
<CustomField>
    <fullName>Payment_PRODUCT__c</fullName>
    <label>Payment PRODUCT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>