force-app/main/default/objects/BackEndPaging__c/fields/Payment_REFFERENCENO__c.field-meta.xml
<CustomField>
    <fullName>Payment_REFFERENCENO__c</fullName>
    <label>Payment REFFERENCENO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>