force-app/main/default/objects/BackEndPaging__c/fields/Payment_REMARK__c.field-meta.xml
<CustomField>
    <fullName>Payment_REMARK__c</fullName>
    <label>Payment REMARK</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>