force-app/main/default/objects/BackEndPaging__c/fields/Payment_SubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>Payment_SubmissionDate__c</fullName>
    <label>Payment SubmissionDate</label>
    <type>Date</type>
</CustomField>