force-app/main/default/objects/BackEndPaging__c/fields/Payment_TransactionType__c.field-meta.xml
<CustomField>
    <fullName>Payment_TransactionType__c</fullName>
    <label>Payment TransactionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>