force-app/main/default/objects/BackEndPaging__c/fields/PolicyApp__c.field-meta.xml
<CustomField>
    <fullName>PolicyApp__c</fullName>
    <label>PolicyApp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>