force-app/main/default/objects/BackEndPaging__c/fields/PolicyHistory_Description__c.field-meta.xml
<CustomField>
    <fullName>PolicyHistory_Description__c</fullName>
    <label>PolicyHistory Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>