force-app/main/default/objects/BackEndPaging__c/fields/PolicyHistory_EventDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyHistory_EventDate__c</fullName>
    <label>PolicyHistory EventDate</label>
    <type>Date</type>
</CustomField>