force-app/main/default/objects/BackEndPaging__c/fields/PolicyHistory_EventType__c.field-meta.xml
<CustomField>
    <fullName>PolicyHistory_EventType__c</fullName>
    <label>PolicyHistory EventType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>