force-app/main/default/objects/BackEndPaging__c/fields/PolicyHistory_PolicyStatus__c.field-meta.xml
<CustomField>
    <fullName>PolicyHistory_PolicyStatus__c</fullName>
    <label>PolicyHistory PolicyStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>