force-app/main/default/objects/BackEndPaging__c/fields/PolicyHistory_Remark__c.field-meta.xml
<CustomField>
    <fullName>PolicyHistory_Remark__c</fullName>
    <label>PolicyHistory Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>