force-app/main/default/objects/BackEndPaging__c/fields/PolicyHistory_UserID__c.field-meta.xml
<CustomField>
    <fullName>PolicyHistory_UserID__c</fullName>
    <label>PolicyHistory UserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>