force-app/main/default/objects/BackEndPaging__c/fields/PolicyNo__c.field-meta.xml
<CustomField>
    <fullName>PolicyNo__c</fullName>
    <label>PolicyNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>