force-app/main/default/objects/BackEndPaging__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <description>CallNote, Payment, Claim, PolicyHistory</description>
    <label>RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>